--- a/status/current.html
+++ b/status/current.html
@@ -32,7 +32,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
  'DRUPAL_BOOTSTRAP_LATE_PAGE_CACHE': 5,
  'DRUPAL_BOOTSTRAP_PATH': 7,
  'DRUPAL_BOOTSTRAP_SESSION': 4,
- 'DrupyHelper': &lt;module 'lib.drupy.DrupyHelper' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyHelper.pyc'&gt;,
+ 'DrupyHelper': &lt;module 'lib.drupy.DrupyHelper' from '/Users/NAME/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyHelper.pyc'&gt;,
  'DrupyMySQL_meta': &lt;class __main__.DrupyMySQL_meta at 0x79c720&gt;,
  'DrupyMySQL_row': &lt;class __main__.DrupyMySQL_row at 0x79c750&gt;,
  'ENT_QUOTES': 1,
@@ -58,7 +58,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
  '_GET': {},
  '_POST': {},
  '_REQUEST': {},
- '_SERVER': {'DOCUMENT_ROOT': '/Users/brendon/work/projects/PythonDrupal/drupy/base',
+ '_SERVER': {'DOCUMENT_ROOT': '/Users/NAME/work/projects/PythonDrupal/drupy/base',
              'GATEWAY_INTERFACE': 'CGI/1.1',
              'HTTP_ACCEPT': '*/*',
              'HTTP_CONNECTION': 'Keep-Alive',
@@ -70,10 +70,10 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
              'REMOTE_PORT': '51978',
              'REQUEST_METHOD': 'GET',
              'REQUEST_URI': '/drupy.py',
-             'SCRIPT_FILENAME': '/Users/brendon/work/projects/PythonDrupal/drupy/base/drupy.py',
+             'SCRIPT_FILENAME': '/Users/NAME/work/projects/PythonDrupal/drupy/base/drupy.py',
              'SCRIPT_NAME': '/drupy.py',
              'SERVER_ADDR': '127.0.0.1',
-             'SERVER_ADMIN': 'brendoncrawford@gmail.com',
+             'SERVER_ADMIN': 'EMAIL ADDRESS NOT SHOWN',
              'SERVER_NAME': 'drupy.local',
              'SERVER_PORT': '80',
              'SERVER_PROTOCOL': 'HTTP/1.0',
@@ -81,7 +81,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
              'SERVER_SOFTWARE': 'Apache/2.2.8 (Unix) PHP/5.2.5'},
  '__builtins__': &lt;module '__builtin__' (built-in)&gt;,
  '__doc__': None,
- '__file__': '/Users/brendon/work/projects/PythonDrupal/drupy/base/drupy.py',
+ '__file__': '/Users/NAME/work/projects/PythonDrupal/drupy/base/drupy.py',
  '__name__': '__main__',
  '__postFields': &lt;function __postFields at 0x68d5b0&gt;,
  '__preg_replace_str': &lt;function __preg_replace_str at 0x68f230&gt;,
