--- a/status/2008-06-18-002330.html
+++ b/status/2008-06-18-002330.html
@@ -4,12 +4,12 @@
 <head>
 <title>Drupy: Drupal in Python</title>
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-<meta name='revised' content='DrupyStatus, 06/18/2008' />
+<meta name='revised' content='DrupyStatus, 06/17/2008' />
 </head>
 <body>
 <h1>Drupy Bootstrap Diagnostic Status</h1>
-<h2>Bootstrap: Completed Phase 'DRUPAL_BOOTSTRAP_PATH' (7)</h2>
-<h3>Generated: Wed Jun 18 07:23:11 2008 GMT</h3>
+<h2>Bootstrap: Completed Phase 'DRUPAL_BOOTSTRAP_LANGUAGE' (6)</h2>
+<h3>Generated: Tue Jun 17 21:14:07 2008 GMT</h3>
 <p>
 This page dumps all the global scope objects within the Drupy bootstrap process. This can be used as a basic gauge of bootstap status.
 </p>
@@ -18,7 +18,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
  'ENT_QUOTES': 1,
  'E_ALL': 6143,
  'E_USER_WARNING': 512,
- 'GET': {'q': 'node'},
+ 'GET': {},
  'Image': &lt;module 'PIL.Image' from '/opt/local/lib/python2.5/site-packages/PIL/Image.pyc'&gt;,
  'POST': {},
  'REQUEST': {},
@@ -31,7 +31,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
             'PATH': '/usr/bin:/bin:/usr/sbin:/sbin',
             'QUERY_STRING': '',
             'REMOTE_ADDR': '127.0.0.1',
-            'REMOTE_PORT': '52766',
+            'REMOTE_PORT': '51240',
             'REQUEST_METHOD': 'GET',
             'REQUEST_URI': '/drupy.py',
             'SCRIPT_FILENAME': '/Users/brendon/work/projects/PythonDrupal/drupy/base/drupy.py',
@@ -133,7 +133,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
  're': &lt;module 're' from '/opt/local/lib/python2.5/re.pyc'&gt;,
  'require': &lt;function include at 0x7701b0&gt;,
  'require_once': &lt;function include at 0x7701b0&gt;,
- 'revised': '06/18/2008',
+ 'revised': '06/17/2008',
  'rtrim': &lt;function rtrim at 0x7700b0&gt;,
  'serialize': &lt;function serialize at 0x7707f0&gt;,
  'session': &lt;module 'beaker.session' from '/opt/local/lib/python2.5/site-packages/beaker/session.pyc'&gt;,
@@ -141,7 +141,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
  'session_set_save_handler': &lt;function session_set_save_handler at 0x76f5b0&gt;,
  'session_start': &lt;function session_start at 0x76f8f0&gt;,
  'sizeof': &lt;function count at 0x7705f0&gt;,
- 'stamp': 'Wed Jun 18 07:23:11 2008 GMT',
+ 'stamp': 'Tue Jun 17 21:14:07 2008 GMT',
  'static': &lt;function static at 0x770630&gt;,
  'stdClass': &lt;class lib.drupy.DrupyPHP.stdClass at 0x76e240&gt;,
  'str_replace': &lt;function str_replace at 0x7704f0&gt;,
@@ -161,7 +161,7 @@ This page dumps all the global scope objects within the Drupy bootstrap process.
  'urldecode': &lt;function urldecode at 0x7701f0&gt;,
  'urllib': &lt;module 'urllib' from '/opt/local/lib/python2.5/urllib.pyc'&gt;,
  'urlparse': &lt;module 'urlparse' from '/opt/local/lib/python2.5/urlparse.pyc'&gt;,
- 'which_phase': (7, 'DRUPAL_BOOTSTRAP_PATH'),
+ 'which_phase': (6, 'DRUPAL_BOOTSTRAP_LANGUAGE'),
  'zlib': &lt;module 'zlib' from '/opt/local/lib/python2.5/site-packages/zlib.so'&gt;}</pre>
 </body>
 </html>
