* Updating diagnostic status

--- a/status/2008-06-27-141453.html
+++ b/status/2008-06-27-141453.html
@@ -4,23 +4,19 @@
 <head>
 <title>Drupy: Drupal in Python</title>
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-<meta name='revised' content='DrupyStatus, 06/27/2008' />
+<meta name='revised' content='DrupyStatus, 06/19/2008' />
 </head>
 <body>
 <h1>Drupy Bootstrap Diagnostic Status</h1>
-<h2>Bootstrap: Completed Phase 'DRUPAL_BOOTSTRAP_FULL' (8)</h2>
-<h3>Generated: Fri Jun 27 21:15:10 2008 GMT</h3>
-<h4 style='color:blue;'>The following Drupy plugins are loaded. A Drupy plugin is the equivalent of a Drupal module.</h4>
-<pre style='background-color:yellow;'>{'system': &lt;module 'modules.system' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/modules/system/__init__.pyc'&gt;}</pre>
-<h4 style='color:blue;'>Global Scope Objects</h4>
-<pre style='background-color:yellow;'>{'DrupyImport': &lt;module 'lib.drupy.DrupyImport' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyImport.pyc'&gt;,
+<h2>Bootstrap: Completed Phase 'DRUPAL_BOOTSTRAP_PATH' (7)</h2>
+<h3>Generated: Thu Jun 19 05:12:22 2008 GMT</h3>
+<h4>Global Scope Objects</h4>
+<pre style='background-color:yellow;'>{'DrupyHelper': &lt;module 'lib.drupy.DrupyHelper' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyHelper.pyc'&gt;,
  '__builtins__': &lt;module '__builtin__' (built-in)&gt;,
- '__doc__': &quot;\n @package Drupy\n @see http://drupy.net\n @note Drupy is a port of the Drupal project.\n  The Drupal project can be found at http://drupal.org\n @file drupy.py (ported from Drupal's drupal.inc)\n  Test Execution script for drupy\n @author Brendon Crawford\n @copyright 2008 Brendon Crawford\n @contact message144 at users dot sourceforge dot net\n @created 2008-01-10\n @version 0.1\n @license: \n\n  This program is free software; you can redistribute it and/or\n  modify it under the terms of the GNU General Public License\n  as published by the Free Software Foundation; either version 2\n  of the License, or (at your option) any later version.\n\n  This program is distributed in the hope that it will be useful,\n  but WITHOUT ANY WARRANTY; without even the implied warranty of\n  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n  GNU General Public License for more details.\n\n  You should have received a copy of the GNU General Public License\n  along with this program; if not, write to the Free Software\n  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.\n&quot;,
+ '__doc__': None,
  '__file__': '/Users/brendon/work/projects/PythonDrupal/drupy/base/drupy.py',
  '__name__': '__main__',
  'inc_bootstrap': &lt;module 'includes.bootstrap' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/includes/bootstrap.pyc'&gt;,
- 'out_plugins': &quot;{'system': &lt;module 'modules.system' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/modules/system/__init__.pyc'&gt;}&quot;,
- 'out_plugins_html': &quot;{'system': &amp;lt;module 'modules.system' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/modules/system/__init__.pyc'&amp;gt;}&quot;,
  'p': &lt;module 'lib.drupy.DrupyPHP' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyPHP.pyc'&gt;,
  'phases': ((0, 'DRUPAL_BOOTSTRAP_CONFIGURATION'),
             (1, 'DRUPAL_BOOTSTRAP_EARLY_PAGE_CACHE'),
@@ -32,12 +28,12 @@
             (7, 'DRUPAL_BOOTSTRAP_PATH'),
             (8, 'DRUPAL_BOOTSTRAP_FULL')),
  're': &lt;module 're' from '/opt/local/lib/python2.5/re.pyc'&gt;,
- 'revised': '06/27/2008',
- 'stamp': 'Fri Jun 27 21:15:10 2008 GMT',
+ 'revised': '06/19/2008',
+ 'stamp': 'Thu Jun 19 05:12:22 2008 GMT',
  'sys': &lt;module 'sys' (built-in)&gt;,
  'time': &lt;module 'time' from '/opt/local/lib/python2.5/lib-dynload/time.so'&gt;,
- 'which_phase': (8, 'DRUPAL_BOOTSTRAP_FULL')}</pre>
-<h4 style='color:blue;'>Loaded Python Modules</h4>
+ 'which_phase': (7, 'DRUPAL_BOOTSTRAP_PATH')}</pre>
+<h4>Loaded Modules</h4>
 <pre style='background-color:yellow;'>{'Cookie': &lt;module 'Cookie' from '/opt/local/lib/python2.5/Cookie.pyc'&gt;,
  'FixTk': &lt;module 'FixTk' from '/opt/local/lib/python2.5/lib-tk/FixTk.pyc'&gt;,
  'MySQLdb': &lt;module 'MySQLdb' from '/opt/local/lib/python2.5/site-packages/MySQLdb/__init__.pyc'&gt;,
@@ -126,7 +122,6 @@
  'lib': &lt;module 'lib' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/__init__.pyc'&gt;,
  'lib.drupy': &lt;module 'lib.drupy' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/__init__.pyc'&gt;,
  'lib.drupy.DrupyHelper': &lt;module 'lib.drupy.DrupyHelper' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyHelper.pyc'&gt;,
- 'lib.drupy.DrupyImport': &lt;module 'lib.drupy.DrupyImport' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyImport.pyc'&gt;,
  'lib.drupy.DrupyMySQL': &lt;module 'lib.drupy.DrupyMySQL' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyMySQL.pyc'&gt;,
  'lib.drupy.DrupyPHP': &lt;module 'lib.drupy.DrupyPHP' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/lib/drupy/DrupyPHP.pyc'&gt;,
  'linecache': &lt;module 'linecache' from '/opt/local/lib/python2.5/linecache.pyc'&gt;,
@@ -135,8 +130,6 @@
  'math': &lt;module 'math' from '/opt/local/lib/python2.5/lib-dynload/math.so'&gt;,
  'md5': &lt;module 'md5' from '/opt/local/lib/python2.5/md5.pyc'&gt;,
  'mimetools': &lt;module 'mimetools' from '/opt/local/lib/python2.5/mimetools.pyc'&gt;,
- 'modules': &lt;module 'modules' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/modules/__init__.pyc'&gt;,
- 'modules.system': &lt;module 'modules.system' from '/Users/brendon/work/projects/PythonDrupal/drupy/base/modules/system/__init__.pyc'&gt;,
  'operator': &lt;module 'operator' from '/opt/local/lib/python2.5/lib-dynload/operator.so'&gt;,
  'os': &lt;module 'os' from '/opt/local/lib/python2.5/os.pyc'&gt;,
  'os.path': &lt;module 'posixpath' from '/opt/local/lib/python2.5/posixpath.pyc'&gt;,
